# cale-idf

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  platformio.ini  requirements.txt  sdkconfig  sdkconfig.old
.github/: FUNDING.yml
cale/: CMakeLists.txt  s2.sh  sdkconfig
components/CalEPD/: CMakeLists.txt  Kconfig.projbuild  component.mk  epd.cpp  epd4spi.cpp  epd7color.cpp  epdParallel.cpp  epdspi.cpp  epdspi2cs.cpp  gdew0213i5f.cpp
components/CalEPD/include/: ED047TC1.h  calepd_version.h  epd.h  epd4spi.h  epd7color.h  epdParallel.h  epdspi.h  epdspi2cs.h  espspi.h  gdeh0154d67.h  gdeh0154z90.h  gdeh0213b73.h  gdeh042Z21.h  gdeh042Z96.h  gdeh116Z91.h  gdem029E97.h  gdep015OC1.h  gdew0213i5f.h  gdew027w3.h  gdew027w3T.h  gdew042t2.h  gdew042t2Grays.h  gdew0583t7.h  gdew0583z21.h  gdew075HD.h  gdew075T7.h  gdew075T7Grays.h  gdew075T8.h  gdew075c64.h  gdew075z09.h  gdew_4grays.h  gdew_colors.h  heltec0151.h  iointerface.h  plasticlogic.h  plasticlogic011.h  plasticlogic014.h  plasticlogic021.h  plasticlogic031.h  wave12i48.h  (+2 more)
components/CalEPD/include/color/: dke075z83.h  gdeh0154z90.h  gdeh042Z21.h  gdeh042Z96.h  gdeq042Z21.h  gdew027c44.h  gdew0583z21.h  gdew0583z83.h  gdew075c64.h  gdew075z09.h  gdey073d46.h  wave4i7Color.h  wave5i7Color.h  wave7colors.h
components/CalEPD/include/color/dke/: dke075z83.h
components/CalEPD/include/custom/: custom042.h
components/CalEPD/include/dke/: depg1020bn.h  depg750bn.h
components/CalEPD/include/goodisplay/: gdeq037T31.h  gdey0154d67.h  gdey0213b74.h  gdey027T91.h  gdey029T94.h  gdey042T81.h  gdey0583T81.h  gdey075T7.h
components/CalEPD/include/goodisplay/touch/: gdey027T91T.h
components/CalEPD/include/parallel/: ED047TC1.h  ED047TC1touch.h  ED060SC4.h  grayscales.h
components/CalEPD/include/small/: gdew0102I3F.h  gdew0102I4FC.h
components/CalEPD/models/: gdeh0154d67.cpp  gdeh0154z90.cpp  gdeh0213b73.cpp  gdem029E97.cpp  gdep015OC1.cpp  gdew0213i5f.cpp  gdew027w3.cpp  gdew027w3T.cpp  gdew042t2.cpp  gdew042t2Grays.cpp  gdew0583t7.cpp  gdew0583z21.cpp  gdew075HD.cpp  gdew075T7.cpp  gdew075T7Grays.cpp  gdew075T8.cpp  heltec0151.cpp  plasticlogic011.cpp  plasticlogic021.cpp  wave12i48.cpp  wave7i5.cpp
components/CalEPD/models/color/: dke075z83.cpp  gdeh0154z90.cpp  gdeh042Z21.cpp  gdeh042Z96.cpp  gdeh116Z91.cpp  gdeq042Z21.cpp  gdew027c44.cpp  gdew0583z21.cpp  gdew0583z83.cpp  gdew075c64.cpp  gdew075z09.cpp  gdey073d46.cpp  wave12i48BR.cpp  wave4i7Color.cpp  wave5i7Color.cpp  wave5i7ColorVector.cpp
components/CalEPD/models/color/dke/: dke075z83.cpp
components/CalEPD/models/custom/: custom042.cpp
components/CalEPD/models/dke/: depg1020bn.cpp  depg750bn.cpp
components/CalEPD/models/fix/: gdeh0213b73.cpp
components/CalEPD/models/goodisplay/: gdeq037T31.cpp  gdey0154d67.cpp  gdey0213b74.cpp  gdey027T91.cpp  gdey029T94.cpp  gdey042T81.cpp  gdey0583T81.cpp  gdey075T7.cpp
components/CalEPD/models/goodisplay/touch/: gdey027T91T.cpp
components/CalEPD/models/not-ready/: wave7i5.cpp  wave7i5.h
components/CalEPD/models/parallel/: ED047TC1.cpp  ED047TC1touch.cpp  ED060SC4.cpp
components/CalEPD/models/plasticlogic/: epdspi2cs.cpp  plasticlogic.cpp  plasticlogic011.cpp  plasticlogic014.cpp  plasticlogic021.cpp  plasticlogic031.cpp
components/CalEPD/models/small/: gdew0102I3F.cpp  gdew0102I4FC.cpp
components/CalEPD/models/testing/: wave7i5.cpp
components/Epdiy-IDF/: CMakeLists.txt  Kconfig.projbuild  Readme.txt  epd_driver.c  epd_driver.cpp  epd_driver_base.cpp  font.c  functions_analysis.txt  i2s_data_bus.cpp  library.properties
components/Epdiy-IDF/include/: epd_driver.h  epd_driver_base.h  i2s_data_bus.h
components/epd_driver/: CMakeLists.txt  epd_driver.c  font.c  render.c
components/epd_driver/include/: epd_driver.h
config-examples/: C3-27-controller-touch-pcb  C3-riscv-spi  (+27 more)
main/: .cproject  .project  CMakeLists.txt  Kconfig.projbuild  cale-7-color.cpp  cale-grayscale.cpp  cale.cpp  demo-epaper-plasticlogic.cpp  demo-epaper.cpp  demo-fonts.cpp  demo-sleep-clock-v2.cpp  demo-sleep-clock.cpp  sdkconfig
main/demos/: cale-sensor.cpp  demo-4-grays-7inch.cpp  demo-7-colors.cpp  demo-ball.cpp  demo-epaper-4gray.cpp  demo-epaper-parallel-partial.cpp  demo-epaper-parallel.cpp  demo-epaper-plasticlogic.cpp  demo-epaper.cpp  demo-fonts.cpp  demo-grays.cpp  demo-sleep-clock.cpp  demo-touch-epd-implemented.cpp  demo-touch-keyboard.cpp  demo-touch-parallel.cpp  demo-touch.cpp  firasans.h  i2c-scan.cpp  on-off-switch.cpp  vector-test.cpp
main/demos/epd47-touch/: multitouch-circles.cpp  touch-simple.cpp
main/demos/gif/: plasticlogic-animation.cpp
main/demos/image_array/: image1.h  image4gray.h
main/demos/parallel/: demo-epaper-parallel-partial.cpp  demo-epaper-parallel.cpp  demo-touch-keyboard.cpp  demo-touch-parallel.cpp
main/demos/plasticlogic/: demo-epaper-plasticlogic.cpp  demo-sleep-clock-temp.cpp  news-ticker.cpp  testpower.cpp
main/demos/rainmaker/: cale-7-color-wifi.cpp  cale-wifi.cpp  on-off-switch.cpp
main/demos/small/: small-display.cpp
main/www-image/: README.md
main/www-image/GIF/: plasticlogic-animation.cpp
main/www-image/GIF/img/: anime.h  anime_sm.h  imagec
main/www-image/main/: CMakeLists.txt  jpg-render.cpp
main/www-image/video/: CMakeLists.txt  README.md  partitions.csv
main/www-image/video/main/: CMakeLists.txt  epdiy-video.cpp  plasticlogic-video.cpp
main/www-image/video/spiffs_HD_single/: homer_640x326.rgb
main/www-image/video/spiffs_image/: bunny-220x124.rgb  bunny-RGB4-220x124.rgb  output.rgb
main/www-jpg-render/: CMakeLists.txt  README.md  sdkconfig_esp32_waveshare_IT8951
main/www-jpg-render/components/bosch/: CMakeLists.txt
main/www-jpg-render/components/jpegdec/include/: JPEGDEC.h
main/www-jpg-render/main/: CMakeLists.txt  Kconfig.projbuild  ble-render.cpp  jpg-render-cinread8951.cpp  jpg-render-it8951.cpp  jpg-render-v2.cpp  jpg-render.cpp  jpgdec-render.cpp
main/www-jpg-render/main/tests/: bmp280-read.c  cinread-8951-sensor-demo.cpp  feli.c  it8951-i2c-scan.cpp  sdkconfig-cinread-S3
(+115 files in other folders)
